# GetPoll

./: README.md
GetPoll/: CMakeLists.txt  cql.txt  cqli.txt  fastcgi-daemon.conf  main.cpp
GetPoll/CassandraDriver/: cassandra.h
GetPoll/Model/: Poll.cpp  Poll.h  PollOption.cpp  PollOption.h  Vote.cpp  Vote.h
GetPoll/Network/: RequestHandler.cpp  WebService.cpp  WebService.h
GetPoll/Storage/: Query.cpp  Query.h  StorageClient.cpp  StorageClient.h
HelloWorld/: HelloWorld.conf  HelloWorld.cpp
load/: agent_collector_127.0.0.1.cfg  ammo.txt  data  load.ini  load.ini~  polls.1  token.txt~
load/logs/: _31f540aed0b1d21007351b51de9cf962.stpd_si.json  _3382433a8735e22591ef65b431091843.stpd  _3382433a8735e22591ef65b431091843.stpd_si.json  _6d1e6d595b3d9ab1fe765216d6b2c662.stpd_si.json  _b11c351fae962a2efa44a7c231a51e55.stpd  _b11c351fae962a2efa44a7c231a51e55.stpd_si.json  _f6b2920968f9dbd973eed632f669ce3b.stpd  phantom_3LcHPM.conf
load/logs/2016-12-29_20-00-18.C1s7kl/: phantom_lXgDXB.conf
load/logs/2016-12-29_20-14-20.cGc0Dd/: agent_collector_Hxf_aQ.cfg  agent_localhost.rawdata  phantom_GFfWnW.conf
load/logs/2016-12-29_20-15-49.KoMdkd/: agent_collector_xDdhvF.cfg  agent_localhost.rawdata  phantom_3BhVzc.conf
load/logs/2016-12-29_20-17-45.nZfO4u/: agent_collector_7FmZCW.cfg  agent_localhost.rawdata  phantom_Iu87qD.conf
load/logs/2016-12-29_20-18-13.uf_isx/: agent_collector_EXscWr.cfg  agent_localhost.rawdata  load.ini  phantom_DFPK6K.conf
load/logs/2016-12-29_20-25-03.ASKK_i/: agent_collector_9Fk5ur.cfg  agent_localhost.rawdata  phantom_nRk6Vu.conf
(+31 files in other folders)
